--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <body>
     <h1>hello, world</h1>
     <p>Call me Ishmael.</p>
-    <img src="images/breaching_whale.jpg">
+    <img src="https://cdn.learnenough.com/breaching_whale.jpg" alt="breaching_whale" >
+    <p>Copyright © 2013 by Denis Hawkins、Creative Commons Attribution-NoDerivs 2.0 Generic ライセンスに基づいて無改変にて利用 https://www.flickr.com/photos/28883788@N04/10097824543</p>
   </body>
 </html>
