--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>hello, world</h1>
+    <a href="about.html">About this project</a>
     <p>Call me Ishmael.</p>
     <img src="https://cdn.learnenough.com/breaching_whale.jpg" alt="breaching_whale" >
     <p>Copyright © 2013 by Denis Hawkins、Creative Commons Attribution-NoDerivs 2.0 Generic ライセンスに基づいて無改変にて利用 https://www.flickr.com/photos/28883788@N04/10097824543</p>
